Chapter-2/Part-3/e-1.08/todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  labels:
    app: todo-app
    version: "1.08"
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
      version: "1.08"
      component: backend
  template:
    metadata:
      labels:
        app: todo-app
        version: "1.08"
        component: backend
    spec:
      containers:
        - name: todo-app-container
          image: michaelangelovalente/todo_app:ex1.08
          # ENV variables config
          ports:
            - name: http-server
              containerPort: 3005
              protocol: TCP
